--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-sm-12 col-md-6 my-3">
+            <div class="col-md-12 col-lg-6 my-3">
                 <div class="card p-3">
                     <div class="card-title text-center">
                         <h1>Products</h1>
@@ -31,7 +31,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6 my-3">
+            <div class="col-md-12 col-lg-6 my-3">
                 <div class="card p-3">
                     <div class="card-title text-center">
                         <h1>Cart</h1>
