add to cart done

--- a/index.html
+++ b/index.html
@@ -36,8 +36,35 @@
                     <div class="card-title text-center">
                         <h1>Cart</h1>
                     </div>
-                    <div class="card-body" id="cart-container">
-                        
+                    <div class="card-body" >
+            
+                            <table class="table table-borderless">
+                                <thead>
+                                  <tr>
+                                    <th scope="col">Sl</th>
+                                    <th scope="col">Item</th>
+                                    <th scope="col"></th>
+                                    <th scope="col">qty</th>
+                                    <th scope="col">Unit Price</th>
+                                    <th scope="col">Price</th>
+                                    <th scope="col"></th>
+                                  </tr>
+                                </thead>
+                                <tbody id="cart-container">
+                                  <tr>
+                                    <th scope="row">1</th>
+                                    <td><img src="img/jeans.jpg" alt="" class="border border-dark" style="width: 50px; height: 50px; border-radius: 50%;"></td>
+                                    <td>Jeans</td>
+                                    <td>1</td>
+                                    <td>200</td>
+                                    <td>200</td>
+                                    <td>X</td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                              <div class="w-100 d-flex justify-content-center">
+                                <h5 class="fw-bold">Total: 400</h5>
+                              </div>
                     </div>
                 </div>
             </div>
